fixed alarm bug fixed layout issues in Firefox

--- a/war/StokerWeb.css
+++ b/war/StokerWeb.css
@@ -117,11 +117,13 @@ h1 {
 
 .sweb-gaugeFlowPanel {
    float: left;
+   width: 100%;
 }
 .sweb-panelGaugeTall{
     width: 200px; 
     height: 375px; 
     text-align: center; 
+	float: left;
 }
 
 .sweb-panelGaugeShort {
